# discord-intercept

./: Cargo.toml  mitm_discord.py  readme.md
src/: main.rs
