[package]
name = "discord-intercept"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9.0", features = ["full"] }
serde = "1"
serde_json = "1"
base64 = "0.13.0"
erlang-term = { version = "0.1.1", features = ["serde_impl"] }